# electricity-demand-forecasting

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: ARCHITECTURE.md  FEATURES.md  MODEL_CARD.md
scripts/: train.py
src/forecast_service/: __init__.py  cli.py
src/forecast_service/api/: __init__.py  app.py  schemas.py
src/forecast_service/data/: __init__.py  loader.py  synthetic.py
src/forecast_service/features/: __init__.py  engineering.py
src/forecast_service/models/: __init__.py  base.py  baselines.py  lightgbm_model.py  pytorch_model.py
src/forecast_service/training/: __init__.py  experiment.py  explainability.py  pipeline.py
src/forecast_service/utils/: __init__.py  config.py  logging.py  metrics.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_api.py  test_features.py  test_metrics.py  test_models.py  test_synthetic.py
