[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-service"
version = "1.0.0"
description = "Production-grade short-term electricity demand forecasting service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Forecast Service Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["forecasting", "electricity", "machine-learning", "time-series"]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
    "statsmodels>=0.14.0",
    "holidays>=0.40",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "mlflow>=2.10.0",
    "shap>=0.44.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
forecast-cli = "forecast_service.cli:app"

[project.urls]
Homepage = "https://github.com/example/electricity-demand-forecasting"
Documentation = "https://example.github.io/electricity-demand-forecasting"
Repository = "https://github.com/example/electricity-demand-forecasting"
Issues = "https://github.com/example/electricity-demand-forecasting/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forecast_service = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "B006",     # Mutable default argument (OK for documented defaults)
    "B008",     # Function call in default argument (OK for typer/fastapi)
    "B904",     # Raise from in except (minor style)
    "ARG001",   # Unused function argument (OK for interface compliance)
    "ARG002",   # Unused method argument
    "PLC0415",  # Import not at top level (OK for lazy imports in CLI)
    "PLW0603",  # Global statement (OK for singleton patterns)
    "PLW2901",  # Loop variable overwritten (OK for tensor device moves)
    "PLR0402",  # Import alias style
    "PTH123",   # open() vs Path.open() (minor style)
    "RUF012",   # Mutable class defaults (OK for constants)
    "RUF015",   # Prefer next(iter()) (minor style)
    "RUF022",   # __all__ not sorted (minor style)
    "RUF059",   # Unpacked variable unused (OK for matplotlib)
    "SIM108",   # Ternary operator (readability preference)
    "TC001",    # Type checking imports (minor optimization)
    "UP035",    # Import from collections.abc (backwards compat)
    "UP045",    # Optional[X] vs X | None (backwards compat)
    "E501",     # Line too long (handled by formatter where possible)
    "F541",     # f-string without placeholders (minor)
]

[tool.ruff.lint.isort]
known-first-party = ["forecast_service"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "shap.*",
    "mlflow.*",
    "statsmodels.*",
    "holidays.*",
    "sklearn.*",
    "torch.*",
    "numpy.*",
    "pandas.*",
    "matplotlib.*",
    "structlog.*",
]
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/forecast_service --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/forecast_service"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/training/*",  # Training pipeline tested in integration
    "*/cli.py",  # CLI tested manually
    "*/pytorch_model.py",  # Requires PyTorch
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
# Lower threshold - some modules require optional deps (PyTorch, MLflow) not in test env
fail_under = 40
